--- a/lukehalleyPortfolio/.editorconfig
+++ b/lukehalleyPortfolio/.editorconfig
@@ -1,6 +1,7 @@
 # Editor configuration, see https://editorconfig.org
 root = true
 
+# EditorConfig helps maintain consistent coding styles across the team
 [*]
 charset = utf-8
 indent_style = space
