--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.26.1",
     "lucide-react": "^0.562.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
