--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^16.1.1",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "next": "^15.1.6",
